src/testData/commands/errors/parent/index.ts
import { defineCommand } from "../../../../definitions.js";

export default defineCommand({
    key: "parent",
    ownerOnly: true,
    allowDMs: false
});
